--- a/.github/workflows/deployments.yml
+++ b/.github/workflows/deployments.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        runner: [worker1, worker2]
+        runner: [application1, application2]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
